--- a/todo-client/src/components/Page/index.less
+++ b/todo-client/src/components/Page/index.less
@@ -35,3 +35,10 @@
   .right {
   }
 }
+
+.content-container {
+  width: 100%;
+  height: calc(100vh - 80px);
+  background-color: #ccc;
+  padding: 20px 40px;
+}
