--- a/todo-client/src/pages/Login/login.less
+++ b/todo-client/src/pages/Login/login.less
@@ -1,15 +1,21 @@
 /* 新增移动端样式 */
+.ant-btn,
+.ant-input,
+.ant-input-password {
+  border-radius: 2px;
+}
 @media screen and (min-width: 400px) {
   .login-wrapper {
     width: 400px;
     margin: 0 auto;
+    background: #fff;
+    padding: 15px;
     .tab-group {
-      margin: 10px auto 20px;
-      justify-content: center;
+      // margin: 10px auto 20px;
+      // justify-content: center;
     }
     .submit-btn {
-      width: 70%;
-      margin-left: 34%;
+      width: 100%;
     }
     .login-tab .login-tab-item {
       cursor: pointer;
@@ -22,8 +28,10 @@
 
 @media screen and (max-width: 400px) {
   .login-wrapper {
-    max-width: 80vw;
+    width: 90vw;
     margin: 0 auto;
+    background: #fff;
+    padding: 10px;
     .tab-group {
       justify-content: center;
     }
