优化移动端样式

--- a/todo-client/src/pages/Home/index.less
+++ b/todo-client/src/pages/Home/index.less
@@ -1,9 +1,11 @@
-.todo-table-row {
-  .ant-table-cell {
-    cursor: pointer;
-  }
-}
-
 .task-table {
-  overflow: auto;
+  .ant-table {
+    overflow: auto;
+  }
+  .task-table-row {
+    max-height: 40px;
+    .ant-table-cell {
+      cursor: pointer;
+    }
+  }
 }
