--- a/todo-client/src/pages/Login/login.less
+++ b/todo-client/src/pages/Login/login.less
@@ -4,12 +4,31 @@
 .ant-input-password {
   border-radius: 2px;
 }
+
+.root-container {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background: lightcyan;
+}
+.lg-header {
+  width: 100%;
+  height: 80px;
+  margin: 60px 0 10px;
+  line-height: 80px;
+  font-size: 28px;
+  font-weight: 700;
+  color: #29bece;
+  background: url("../../assets/logo.png") 10%/10% no-repeat;
+}
 @media screen and (min-width: 400px) {
+  .lg-header {
+    text-align: center;
+  }
   .login-wrapper {
-    width: 400px;
-    margin: 0 auto;
-    background: #fff;
-    padding: 15px;
+    width: 300px;
+    margin: 15vh auto 0;
+    // background: #fff;
     .tab-group {
       // margin: 10px auto 20px;
       // justify-content: center;
@@ -27,11 +46,12 @@
 }
 
 @media screen and (max-width: 400px) {
+  .lg-header {
+    text-indent: 100px;
+  }
   .login-wrapper {
-    width: 90vw;
+    padding: 0 30px;
     margin: 0 auto;
-    background: #fff;
-    padding: 10px;
     .tab-group {
       justify-content: center;
     }
