--- a/bill-client/src/pages/BillChart/index.less
+++ b/bill-client/src/pages/BillChart/index.less
@@ -1,6 +1,10 @@
 @import "../../assets/style/variable.less";
 
 .bill-chart-container {
+  .tabs {
+    position: fixed;
+    bottom: 0;
+  }
   .bill-table {
     .bill-item {
       .desc {
