--- a/bill-client/src/components/Page/index.less
+++ b/bill-client/src/components/Page/index.less
@@ -20,7 +20,7 @@
     padding: 0 10px;
     height: @head-height;
     box-sizing: border-box;
-    color: #ccc;
+    color: #ffffff;
     .left {
       display: flex;
       align-items: center;
