--- a/bill-client/src/pages/BillChart/index.less
+++ b/bill-client/src/pages/BillChart/index.less
@@ -1,9 +1,21 @@
 @import "../../assets/style/variable.less";
 
 .bill-chart-container {
-  .tabs {
-    position: fixed;
-    bottom: 0;
+  .bill-tabs{
+    width: 100%;
+    height: 100%;
+    padding-bottom: 60px;
+    >.tab-tags{
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      height: 60px;
+      z-index: 1;
+      background: #29bece;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    }
   }
   .bill-table {
     .bill-item {
@@ -24,6 +36,18 @@
         font: 12px weight;
         color: #ccc;
       }
+    }
+  }
+  .stage-tabs{
+    .tab-tags{
+      // position: relative;
+      // bottom: 0;
+      // height: 60px;
+      // background: #29bece;
+      // width: 100%;
+      // display: flex;
+      // justify-content: space-around;
+      // align-items: center;
     }
   }
 }
