--- a/bill-client/src/components/Page/index.less
+++ b/bill-client/src/components/Page/index.less
@@ -1,7 +1,7 @@
 @import "../../assets/style/variable.less";
 
 // 变量
-@head-height: 80px;
+@head-height: 65px;
 @page-height: calc(100vh - @head-height);
 
 // 根页面
@@ -9,7 +9,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: #ccc;
+  // background: #ccc;
   // 头
   .header-container {
     width: 100%;
@@ -69,7 +69,7 @@
   // 主体内容
   .content-container {
     height: @page-height;
-    padding: 10px;
+    // padding: 10px;
     overflow: auto;
   }
 }
