--- a/bill-client/src/pages/BillChart/index.less
+++ b/bill-client/src/pages/BillChart/index.less
@@ -39,15 +39,39 @@
     }
   }
   .stage-tabs{
+    position: relative;
+    text-align: center;
     .tab-tags{
-      // position: relative;
-      // bottom: 0;
-      // height: 60px;
-      // background: #29bece;
-      // width: 100%;
-      // display: flex;
-      // justify-content: space-around;
-      // align-items: center;
+      background-color: lightblue;
+      padding: 30px 0 30px 15px;
+      .tab-tag{
+        padding: 0 5px;
+      }
     }
+    .statistic{
+      background-color: lightblue;
+      .date{
+        position: absolute;
+        right: 20px;
+        top: 20px;
+      }
+      .total{
+        color:#fff;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        // margin-top: 30px;
+      .wrapper{
+        display: flex;
+        flex-direction: column;
+      }
+
+      }
+    }
+  }
+ 
+  .analysis-tabs{
+    background: #fff;
   }
 }
