--- a/bill-client/src/components/Tabs/index.less
+++ b/bill-client/src/components/Tabs/index.less
@@ -4,7 +4,8 @@
         .tab-tag{
             color: #fff;
             &.active{
-                color: darkolivegreen;
+                // color: darkolivegreen;
+                opacity: 0.8;
             }
             .text{
                 padding-left: 5px;
