--- a/bill-client/src/pages/BillChart/index.less
+++ b/bill-client/src/pages/BillChart/index.less
@@ -1,6 +1,9 @@
 @import "../../assets/style/variable.less";
 
 .bill-chart-container {
+  // background: @theme-color;
+  width: 100%;
+  height: 100%;
   .bill-tabs{
     width: 100%;
     height: 100%;
@@ -11,7 +14,8 @@
       width: 100%;
       height: 60px;
       z-index: 1;
-      background: #29bece;
+      background: @theme-color;
+      // opacity: 0.8;
       display: flex;
       justify-content: space-around;
       align-items: center;
@@ -41,19 +45,19 @@
   .stage-tabs{
     position: relative;
     text-align: center;
+    background-color: @pay-color;
     .tab-tags{
-      background-color: lightblue;
       padding: 30px 0 30px 15px;
       .tab-tag{
         padding: 0 5px;
       }
     }
     .statistic{
-      background-color: lightblue;
       .date{
         position: absolute;
         right: 20px;
         top: 20px;
+        max-width: 100px;
       }
       .total{
         color:#fff;
@@ -65,6 +69,16 @@
       .wrapper{
         display: flex;
         flex-direction: column;
+        .word{
+          font-size: 14px;
+        }
+        .money{
+          font-size: 18px;
+        }
+        .calc{
+          font-size: 12px;
+          opacity: 0.6;
+        }
       }
 
       }
@@ -72,6 +86,5 @@
   }
  
   .analysis-tabs{
-    background: #fff;
   }
 }
