--- a/bill-client/src/pages/BillChart/index.less
+++ b/bill-client/src/pages/BillChart/index.less
@@ -62,6 +62,7 @@
       .total{
         color:#fff;
         display: flex;
+        flex-wrap: wrap;
         flex-direction: row;
         align-items: center;
         justify-content: space-around;
@@ -73,7 +74,11 @@
           font-size: 14px;
         }
         .money{
-          font-size: 18px;
+          font-size: 28px;
+          margin: 8px 0;
+          &-unit{
+            font-size:12px;
+          }
         }
         .calc{
           font-size: 12px;
