--- a/bill-client/src/pages/Person/index.less
+++ b/bill-client/src/pages/Person/index.less
@@ -7,4 +7,10 @@
     margin-bottom: 10px;
     border-bottom: 1px solid #ccc;
   }
+  .avatar-uploader{
+    .ant-upload{
+      background-color: #fff !important;
+      border: unset !important;
+    }
+  }
 }
