--- a/bill-client/src/assets/style/variable.less
+++ b/bill-client/src/assets/style/variable.less
@@ -5,7 +5,7 @@
 @COLOR_PRIMARY_GREEN_2: #29bece;
 // 定义主题色变量
 @theme-color: @COLOR_PRIMARY_GREEN_2;
-@pay-color: #108ee9;
+@pay-color: rgb(23, 119, 255);
 
 // 定义单行文本缩略样式  ps: @ellipsis()  引用
 @ellipsis: {
