修改主题色

--- a/bill-client/src/components/Page/index.less
+++ b/bill-client/src/components/Page/index.less
@@ -59,6 +59,7 @@
   .sidebar-container {
     position: absolute;
     left: 0;
+    width: 90%;
     z-index: 2;
     top: @head-height;
     height: @page-height;
