--- a/bill-client/src/pages/Person/index.less
+++ b/bill-client/src/pages/Person/index.less
@@ -6,9 +6,12 @@
     padding: 10px 6px;
     margin-bottom: 10px;
     border-bottom: 1px solid #ccc;
+    .label {
+      font-size: 18px;
+    }
   }
-  .avatar-uploader{
-    .ant-upload{
+  .avatar-uploader {
+    .ant-upload {
       background-color: #fff !important;
       border: unset !important;
     }
