--- a/bill-client/src/pages/BillChart/index.less
+++ b/bill-client/src/pages/BillChart/index.less
@@ -27,6 +27,7 @@
       .left {
         width: 40px;
         height: 40px;
+        border-radius: 50%;
         max-width: 18%;
         margin-right: 2%;
       }
